cleaned the requirements and dev setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ packages = find:
 python_requires = >=3.11
 include_package_data = True
 install_requires =
-    numpy<1.24
+    numpy
     pyvista
     scipy
     matplotlib
