Pulling in improvements from the dev branch. (#4)
* Added pytest as the testing library and fixed old test behaviours

* fixes for readme badges

* Fixes for small issues

* fix wrong axis direction in visible pose estimation

* fixed outlier removal, added adaptive decimation function

* added check for empty image folders to the abstract target

* added check for missing detection in target detections

* removed leftover fields from camera loader

* Moved functionality to class functions on the bundle primitive.

* removed a recursive callstack from targetDetection

* Added a fallback to non-compiled code for initialisation

* cleaned the requirements and dev setup

* updated the tests to pass

* setting up a tagged publishing workflow

---------

Co-authored-by: Robin <rlav44@aucklanduni.ac.nz>
Co-authored-by: raymon124 <theprolificone@hotmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,21 @@
 [metadata]
 name = pyCamSet
-version = 0.5
+version = 0.5.1.0
 author = Robin Laven
 author_email = r.laven@auckland.ac.nz
 description = Object oriented cameras for computer vision
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/rlav440/pyCamSet
+repository = https://github.com/rlav440/pyCamSet
+license = "Apache-2.0"
 
 [options]
 packages = find:
-python_requires = >=3.9
+python_requires = >=3.11
 include_package_data = True
 install_requires =
-    numpy<1.24
+    numpy
     pyvista
     scipy
     matplotlib
