--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ packages = find:
 python_requires = >=3.11
 include_package_data = True
 install_requires =
-    numpy
+    numpy<2.0
     pyvista
     scipy
     matplotlib
