Temporarily limited numpy version to prevent install errors (#10)
* Added pytest as the testing library and fixed old test behaviours

* fixes for readme badges

* Fixes for small issues

* fix wrong axis direction in visible pose estimation

* fixed outlier removal, added adaptive decimation function

* added check for empty image folders to the abstract target

* added check for missing detection in target detections

* removed leftover fields from camera loader

* Moved functionality to class functions on the bundle primitive.

* removed a recursive callstack from targetDetection

* Added a fallback to non-compiled code for initialisation

* cleaned the requirements and dev setup

* updated the tests to pass

* setting up a tagged publishing workflow

* Update setup.cfg

* removed extra file

* fixed the detection behaviour for the image detection when given empty data

* fixed a further bug

* updated version

* fixed handling of empty data detections

* Update setup.cfg

Added a numpy < 2.0 to prevent errors with openCV

* Update setup.cfg

---------

Co-authored-by: Robin <rlav44@aucklanduni.ac.nz>
Co-authored-by: raymon124 <theprolificone@hotmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = pyCamSet
 
 
-version = 0.5.7
+version = 0.5.8
 author = Robin Laven
 author_email = r.laven@auckland.ac.nz
 description = Object oriented cameras for computer vision
@@ -17,7 +17,7 @@ packages = find:
 python_requires = >=3.11
 include_package_data = True
 install_requires =
-    numpy
+    numpy<2.0
     pyvista
     scipy
     matplotlib
