--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = pyCamSet
 
 
-version = 0.5.6
+version = 1.0.0
 author = Robin Laven
 author_email = r.laven@auckland.ac.nz
 description = Object oriented cameras for computer vision
@@ -21,7 +21,7 @@ install_requires =
     pyvista
     scipy
     matplotlib
-    opencv-contrib-python<4.7
+    opencv-contrib-python
     tqdm
     numba
     natsort
