removed need for contribs, as ARUCO is part of opencv now

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ install_requires =
     pyvista
     scipy
     matplotlib
-    opencv-contrib-python
+    opencv
     tqdm
     numba
     natsort
