--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,9 @@
 name = pyCamSet
 
 
-version = 0.5.8
+
+version = 1.0.0
+
 author = Robin Laven
 author_email = r.laven@auckland.ac.nz
 description = Object oriented cameras for computer vision
@@ -21,7 +23,7 @@ install_requires =
     pyvista
     scipy
     matplotlib
-    opencv-contrib-python<4.7
+    opencv
     tqdm
     numba
     natsort
