--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -10,7 +10,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/upload-artifact@v4
+      uses: actions/download-artifact@v4
       with:
         python-version: "3.x"
 
