Update setup.cfg to remove the numpy limit

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ packages = find:
 python_requires = >=3.11
 include_package_data = True
 install_requires =
-    numpy<2.0
+    numpy
     pyvista
     scipy
     matplotlib
